Quick Fix for Index Logo
- Logo shouldn't get cut off anymore when opening the webpage in portrait-mode (phone)

--- a/src/styles.css
+++ b/src/styles.css
@@ -36,6 +36,11 @@ h3{
     opacity: 0.55;
 }
 
+span h3 {
+    font-size: 15px;
+    opacity: 0.55;
+}
+
 button{
     background-color: #202020;
     color: white;
